--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-ionicons": "^4.2.1"
+    "react-ionicons": "^4.2.1",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
