--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^5.5.0",
     "react-ionicons": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
