--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "firebase": "^11.4.0",
     "firebase-tools": "^13.34.0",
+    "moment": "^2.30.1",
     "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
